--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,11 @@ transition: color 0.3s ease;
 }
 
 /*Iconos*/
-
+.footer-social img.social-icon {
+    width: 30px; /* Ajusta este valor según tus preferencias */
+    height: 30px; /* Ajusta este valor según tus preferencias */
+    margin-right: 10px;
+}
 .custom-icon, 
 .btn-custom,
 .fa-cart-shopping { 
